# LCVB_generation_evaluation

./: .env.example  .gitignore  DESIGN.md  INFERENCE.md  LICENSE  README.md  SCORING.md  pyproject.toml  requirements.txt  run_canon_all.sh
analysis/: paper_analyses.py  vigilance_breakdown.md  vigilance_breakdown.py
analysis/figures/: sr_per_domain_haiku.csv  sr_surface_haiku_canon_unified.csv
data/: scenarios_FINAL.tsv
data/distractors/: 014335d0db9f.json  033660cca62f.json  12a64e3fb0f6.json  12b8eff3a2de.json  157859496ad6.json  1745eca4fc94.json  1ae886f8ec60.json  1e1921c3db3d.json  1e282b9b820e.json  1e3b23af8569.json  1f70bcb5d3d1.json  22dcb145f9e7.json  2d03879aeb75.json  332627944e32.json  333e72b77a7e.json  385f41abe989.json  397d6a9e2f9c.json  3aea336ea350.json  3b4761800fa8.json  3be9d2a391a3.json  46ac751ffa86.json  4a57d07ce53f.json  4a695963058c.json  4c261d7d8a9d.json  4d111b607425.json  4fb4e2a1db10.json  4ff4f55632cd.json  50cbbb39273a.json  52c3e23c7f6f.json  5342b029447f.json  53e7eaf2f310.json  54ff80cca526.json  5608d869602a.json  5840d84b0cf4.json  5d8c446fbd48.json  619ca944fad1.json  65d03a082a80.json  68f128a06408.json  6a023caa7072.json  6ac81ac11bc7.json  (+62 more)
pipeline/: batch_anthropic.py  batch_common.py  batch_gemini.py  batch_judge.py  batch_openai.py  batch_runner.py  clean_error_rows.py  distractor_pool.py  eval_pipeline.py  multi_model_runner.py  openrouter_client.py  preflight.py  rejudge_failed.py  run.py
scripts/: README.md  build_data_tarball.sh  per_model_card.py  run_canon.sh  status.sh
viewer/: README.md  app.py
(+42 files in other folders)
