[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lcvb-generation-evaluation"
version = "0.1.0"
description = "LCVB (Long-Context Vigilance Benchmark) — scenario/distractor mixing and evaluation pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Josh Ludan" }]
keywords = ["llm", "evaluation", "long-context", "safety", "benchmark"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/JMRLudan/LCVB_generation_evaluation"
Repository = "https://github.com/JMRLudan/LCVB_generation_evaluation"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]
